--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,8 @@ python = "^3.9"
 Django = "^3.1.3"
 
 [tool.poetry.dev-dependencies]
+autopep8 = "^1.5.4"
+flake8 = "^3.8.4"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
