--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ license = "MIT"
 [tool.poetry.dependencies]
 python = "^3.9"
 Django = "^3.1.3"
+djangorestframework = "^3.12.1"
 
 [tool.poetry.dev-dependencies]
 autopep8 = "^1.5.4"
