--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,10 +9,11 @@ license = "MIT"
 python = "^3.9"
 Django = "^3.1.3"
 djangorestframework = "^3.12.1"
+drf-spectacular = "^0.10.0"
 
 [tool.poetry.dev-dependencies]
 autopep8 = "^1.5.4"
-flake8 = "^3.8.4"
+mypy = "^0.790"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
