--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,10 +6,12 @@ authors = ["SphericalKat <amolele@gmail.com>"]
 license = "MIT"
 
 [tool.poetry.dependencies]
-python = "^3.9"
+python = "^3.7"
 Django = "^3.1.3"
 djangorestframework = "^3.12.1"
 drf-spectacular = "^0.10.0"
+gunicorn = "^20.0.4"
+uvicorn = {extras = ["standard"], version = "^0.12.2"}
 
 [tool.poetry.dev-dependencies]
 autopep8 = "^1.5.4"
