--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,12 +7,14 @@ services:
             - static_volume:/app/static
         expose: 
             - 8000
+        env_file: 
+            - ./.env
     nginx:
         build: ./nginx
         volumes: 
             - static_volume:/app/static
         ports: 
-            - 3000:80
+            - 80:80
         depends_on: 
             - web
 
