--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ djangorestframework = "^3.12.1"
 drf-spectacular = "^0.10.0"
 gunicorn = "^20.0.4"
 uvicorn = {extras = ["standard"], version = "^0.12.2"}
+django-cors-headers = "^3.5.0"
 
 [tool.poetry.dev-dependencies]
 autopep8 = "^1.5.4"
