--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -52,6 +52,8 @@ jobs:
         env:
           VALIDATE_ALL_CODEBASE: true
           VALIDATE_MARKDOWN: false
-          VALIDATE_DOCKER: false
+          VALIDATE_DOCKERFILE: false
+          VALIDATE_DOCKERFILE_HADOLINT: false
+          VALIDATE_PYTHON_FLAKE8: false
           DEFAULT_BRANCH: master
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
